--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
         </section>
     </main>
     
-    <script src="firebase.js"></script>
-    <script src="script.js"></script>
-    <script src="biometric.js"></script>
-    <script src="ai-chatbot.js"></script>
-    <script src="qr-code.js"></script>
+    <script type="module" src="firebase.js"></script>
+    <script type="module" src="script.js"></script>
+    <script type="module" src="biometric.js"></script>
+    <script type="module" src="ai-chatbot.js"></script>
+    <script type="module" src="qr-code.js"></script>
+
 </body>
 </html>
