--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <!-- ✅ Biometric Authentication -->
+        <!-- Biometric Authentication -->
         <section id="auth-container">
             <h2>Login with Biometrics</h2>
             <button id="register-btn">Register Biometrics</button>
@@ -22,26 +22,26 @@
             <p id="auth-status"></p>
         </section>
 
-        <!-- ✅ Habit Tracker Input -->
+        <!-- Habit Tracker Input -->
         <section id="habit-form">
             <h2>Track Your Habits</h2>
             <input type="text" id="habit-input" placeholder="Enter a habit" aria-label="Enter a habit">
             <button id="add-habit">Add Habit</button>
         </section>
 
-        <!-- ✅ Habit List -->
+        <!-- Habit List -->
         <section>
             <h2>Your Habits</h2>
             <ul id="habit-list" aria-live="polite"></ul>
         </section>
 
-        <!-- ✅ QR Code Generator -->
+        <!-- QR Code Generator -->
         <section id="qr-container">
             <h2>Share Your Habit Tracker</h2>
             <div id="qr-code"></div>
         </section>
 
-        <!-- ✅ AI Chatbot -->
+        <!-- AI Chatbot -->
         <section id="chatbot-container">
             <h2>Chat with AI</h2>
             <div id="chat-history"></div>
@@ -53,7 +53,6 @@
 
     </main>
 
-    <!-- ✅ JavaScript Modules -->
     <script type="module" src="firebase.js"></script>
     <script type="module" src="script.js"></script>
     <script type="module" src="biometric.js"></script>
