--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <ul id="habit-list" aria-live="polite"></ul>
         </section>
 
+        <!--  Chart Section -->
+        <section>
+            <h2>Habit Completion Overview</h2>
+            <canvas id="habit-chart" width="400" height="200"></canvas>
+        </section>
+
         <!-- QR Code Generator -->
         <section id="qr-container">
             <h2>Share Your Habit Tracker</h2>
