--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
 
     </main>
-
+    <!-- Floating Toggle Button for Chatbot -->
+    <button id="chat-toggle" aria-label="Open Chatbot">💬</button>
     <script type="module" src="firebase.js"></script>
     <script type="module" src="script.js"></script>
     <script type="module" src="biometric.js"></script>
